--- a/13.DOM-eventy/index.html
+++ b/13.DOM-eventy/index.html
@@ -21,11 +21,21 @@
         <button id="ex2" data-text="To jest tekst z buttona wpisany do spanaa">Zadanie 2</button>
         <span id="span-ex2"></span>
     </div>
+
+    <br />
+    <br />
+
+    <div>
+        <button id="ex5-button" >Zadanie 5</button>
+        <span id="ex5"></span>
+    </div>
     <hr />
     <br />
     <br />
+
+    <span id="calculator-history"></span>
     <div id="calculator">
-        <input type="text" />
+        <input type="text" value="0" />
         <br />
         <br />
         <div>
